--- a/TravelEasy.ElectricVehicles.Models/TravelEasy.ElectricVehicles.DB.Models/TravelEasy.EV.DB.Models.Diesel.csproj
+++ b/TravelEasy.ElectricVehicles.Models/TravelEasy.ElectricVehicles.DB.Models/TravelEasy.EV.DB.Models.Diesel.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>TravelEasy.ElectricVehicles.DB.Models</Title>
+    <PackageId></PackageId>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
