--- a/TravelEasy.ElectricVehicles.Models/TravelEasy.ElectricVehicles.DB.Models/TravelEasy.EV.DB.Models.Diesel.csproj
+++ b/TravelEasy.ElectricVehicles.Models/TravelEasy.ElectricVehicles.DB.Models/TravelEasy.EV.DB.Models.Diesel.csproj
@@ -7,7 +7,11 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>TravelEasy.EV.DB.Models.Diesel</Title>
     <PackageId></PackageId>
-    <Version>2.1.0</Version>
+    <Version>2.1.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.9" />
+  </ItemGroup>
 
 </Project>
