--- a/TravelEasy.ElectricVehicles.Models/TravelEasy.ElectricVehicles.DB.Models/TravelEasy.EV.DB.Models.csproj
+++ b/TravelEasy.ElectricVehicles.Models/TravelEasy.ElectricVehicles.DB.Models/TravelEasy.EV.DB.Models.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,8 +6,6 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>TravelEasy.ElectricVehicles.DB.Models</Title>
-    <PackageId></PackageId>
-    <Version>1.0.2</Version>
   </PropertyGroup>
 
 </Project>
